--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,11 @@
 image: maven:3-jdk-8
 
+variables:
+  MAVEN_OPTS: "-Dmaven.repo.local=.m2"
+
 cache:
   paths:
-    - .m2/repository
+    - .m2/
 
 maven-build:
   stage: build
