--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.selfcoders.common</groupId>
         <artifactId>bukkit-plugin-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
 
     <groupId>com.selfcoders</groupId>
@@ -16,18 +16,14 @@
     <description>Let mobs talk to players on events like damage or death</description>
     <url>https://gitlab.com/Programie/TalkingMobs</url>
 
+    <properties>
+        <bukkit-api-version>1.12.2</bukkit-api-version>
+    </properties>
+
     <repositories>
         <repository>
             <id>common-repo</id>
             <url>https://gitlab.com/api/v4/projects/Programie%2FCommon/packages/maven</url>
         </repository>
     </repositories>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
 </project>
