--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,8 @@
 
     <repositories>
         <repository>
-            <id>common-repo</id>
-            <url>https://gitlab.com/api/v4/projects/18622581/packages/maven</url>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/Programie/Common</url>
         </repository>
     </repositories>
 </project>
